[package]
name = "p-address-lookup-table"
version = "0.0.1"
description = "A pinocchio-based Address Lookup Table program"
edition = "2021"
readme = "./README.md"
license-file = "./LICENSE"
repository = "https://github.com/AkliluYirgalem/p-address-lookup-table"

[lib]
crate-type = ["cdylib"]

[dependencies]
pinocchio-system = { version = "0.4.0" }
pinocchio = { version = "0.9.2" }
pinocchio-log = { version = "0.5.1" }

[dev-dependencies]
mollusk-svm = "0.9.0"
solana-account = "3.3.0"
solana-instruction = "3.1.0"
solana-program-error = "3.0.0"
solana-pubkey = "4.0.0"
solana-program = "3.0.0"
